<resources>
	<string name="app_name">CardinalBotics</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">CardinalBotics 4159</string>
	<string name="nav_header_subtitle">Ayaka.Chou@Team4159.org</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_calendar">Calendar</string>
	<string name="menu_forms">Forms</string>
	<string name="menu_resources">Team Resources</string>
	<string name="menu_training">Training</string>
	<string name="menu_login">Login</string>
	<string name="menu_timelog">Time Log</string>

	<string name="outreach"><a href="https://en.wikipedia.org/wiki/Towel">Outreach/Volunteer</a></string>
	<string name="codeacademy"><a href="https://en.wikipedia.org/wiki/Towel">CODEACADEMY</a></string>
	<string name="ic_menu_resources">Team Resources</string>
	<string name="default_calendar_event_desc">More details about the Event go here woooo\nIt\'s gonna be so exciting\nYep</string>
</resources>