<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@id/nav_home">

	<fragment
		android:id="@+id/nav_home"
		android:name="com.example.cardinalbotics.ui.home.HomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_home">
		<action
			android:id="@+id/action_nav_home_to_nav_resources"
			app:destination="@id/nav_resources" />
		<action
			android:id="@+id/action_nav_home_to_nav_calendar"
			app:destination="@id/nav_calendar" />
		<action
			android:id="@+id/action_nav_home_to_nav_forms"
			app:destination="@id/nav_forms" />
		<action
			android:id="@+id/action_nav_home_to_nav_training2"
			app:destination="@id/nav_training" />
	</fragment>

	<fragment
		android:id="@+id/nav_calendar"
		android:name="com.example.cardinalbotics.ui.calendar.CalendarFragment"
		android:label="@string/menu_calendar"
		tools:layout="@layout/fragment_calendar" />

	<fragment
		android:id="@+id/nav_forms"
		android:name="com.example.cardinalbotics.ui.forms.FormsFragment"
		android:label="@string/menu_forms"
		tools:layout="@layout/fragment_forms" />

	<fragment
		android:id="@+id/nav_resources"
		android:name="com.example.cardinalbotics.ui.resources.ResourcesFragment"
		android:label="@string/menu_resources"
		tools:layout="@layout/fragment_resources" />

	<fragment
		android:id="@+id/nav_training"
		android:name="com.example.cardinalbotics.ui.training.TrainingFragment"
		android:label="@string/menu_training"
		tools:layout="@layout/fragment_training" />

</navigation>